# project_rl

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  arm_registry.py  pyproject.toml  pyrightconfig.json
RL-term-project-agent-cli/mkt4822_custom_tasks/: 1_baseline_actor_critic_basic.txt  1_short_actor_critic_minimal_complete.txt  1_short_actor_critic_short_train.txt  2_boundary_actor_critic_boundary_edges.txt  2_terminal_actor_critic_terminal_timeout.txt  2_transition_actor_critic_transition_guard.txt  3_baseline_actor_critic_reproducible.txt  3_long_actor_critic_multi_output.txt  4_long_actor_critic_extended_training.txt  4_reward_actor_critic_negative_rewards.txt  4_reward_actor_critic_sparse_reward.txt  4_risky_actor_critic_invalid_actions.txt  4_stress_actor_critic_stress.txt  5_actor_critic_hard_reference_like.txt  5_actor_critic_reference_like.txt
RL-term-project-agent-cli/project-assignment/: mkt4822_actor_critic.txt
RL-term-project-agent-cli/proof/: generation_report.csv
RL-term-project-agent-cli/runs/: A0_baseline_disabled.jsonl  A0_baseline_disabled.summary.json  A1_starter_results.jsonl  A2_student_results.jsonl  A2_student_results.summary.json  hard_bench_bandit.sqlite
configs/: default.yaml  models.yaml  prompts.yaml  security.yaml  validation.yaml
docs/: agent_loop.md  architecture.md  development_roadmap.md  memory_and_reward.md  quality_report.md  qwen3_ollama_notes.md  references.md  security_model.md  validation_pipeline.md
scripts/: bandit_benchmark.py  hard_runtime_benchmark.py
src/mecha_agent_cli/: __init__.py  __main__.py
tests/golden/: test_fibonacci_golden.py  (+2 more)
(+166 files in other folders)
